--- a/advent.opam
+++ b/advent.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/andrlime/aoc2025/issues"
 depends: [
   "dune" {>= "3.18"}
   "ocaml"
+  "ppx_expect"
   "odoc" {with-doc}
 ]
 build: [
