optimisations: use O(1) Array instead of O(n) List, write ArrayUtil.iter2d fn

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,13 +7,28 @@ tasks:
       - ocamlformat --inplace ./lib/*.ml
       - ocamlformat --inplace ./bin/*.ml
       - ocamlformat --inplace ./test/*.ml
+    silent: false
+    aliases:
+      - f
   run:
     dir: .
     cmds:
       - dune exec bin/main.exe {{.CLI_ARGS}}
-    silent: true
+    silent: false
+    aliases:
+      - r
   test:
     dir: .
     cmds:
       - PROJECT_ROOT=`pwd` dune test
-    silent: true
+    silent: false
+    aliases:
+      - t
+  precommit:
+    dir: .
+    cmds:
+      - task: test
+      - task: format
+    silent: false
+    aliases:
+      - p
