add iter2d and map2d helpers to ListUtil as well

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,9 @@ tasks:
       - ocamlformat --inplace ./lib/*.ml
       - ocamlformat --inplace ./bin/*.ml
       - ocamlformat --inplace ./test/*.ml
+
+      - ocamlformat --inplace ./lib/**/*.mli
+      - ocamlformat --inplace ./lib/*.mli
     silent: false
     aliases:
       - f
