--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,7 @@
 (library
  (name advent)
  (libraries
-  day1 day2 day3 day4 day5 shared
+  day1 day2 day3 day4 day5
+  shared template
   core
  ))
