--- a/src/dune
+++ b/src/dune
@@ -2,7 +2,7 @@
  (name advent)
  (libraries
   day1 day2 day3 day4 day5 day6
-  day7 day8 day9 day10
+  day7 day8 day9 day10 day11
   shared template
   core
  ))
